test/compile_fail/string_addition.pine
def main do
  "asdf" + "str" # error: failed to unify
end
